[project]
name = "gitmatch-ai"
version = "0.1.0"
description = "Streamlit dashboard for matching developer skills to GitHub issues through MCP."
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
